# bdk-example

./: .gitignore  Cargo.toml  README.md  wallet.toml.sample  wallet.yaml.sample
src/: config.rs  lib.rs  main.rs  network.rs  segwit.rs
src/segwit/: common.rs  v1.rs  wallet.rs
