[package]
name = "bdk-starter-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_wallet = { version = "2.2.0", features = ["rusqlite"] }
bdk_esplora = { version = "0.22.1", features = ["blocking"] }
bitcoin = "0.32.7"
secp256k1 = "0.31.1"
hex = "0.4.3"
anyhow = "1.0.100"
miniscript = "12.3.5"
bdk_bitcoind_rpc = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive"] }
toml = "0.9.8"
