[package]
name = "bdk-starter-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_wallet = { version = "2.2.0", features = ["rusqlite"] }
bdk_bitcoind_rpc = "0.22.0"
hex = "0.4.3"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.50", features = ["derive"] }
toml = "0.9.8"
